kubernetes/apps/glance/middleware-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: glance-headers
  namespace: glance
  labels:
    app: glance
spec:
  headers:
    frameDeny: true
