kubernetes/apps/glance/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: glance
  labels:
    app: glance
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      automountServiceAccountToken: false
      containers:
      - name: glance
        image: glanceapp/glance:v0.8.5
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/healthz
            port: http
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/healthz
            port: http
          periodSeconds: 30
          failureThreshold: 3
        resources:
          requests:
            cpu: 25m
            memory: 64Mi
          limits:
            memory: 256Mi
        volumeMounts:
        - name: glance-config
          mountPath: /app/config/
          readOnly: true
        - name: glance-assets
          mountPath: /app/assets/
          readOnly: true
        - name: glance-secrets
          mountPath: /run/secrets
          readOnly: true
      volumes:
      - name: glance-config
        configMap:
          name: glance-config
      - name: glance-assets
        configMap:
          name: glance-assets
      - name: glance-secrets
        secret:
          secretName: glance-secrets
          defaultMode: 0400
