kubernetes/apps/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance-svc
  namespace: glance
  labels:
    app: glance
spec:
  type: ClusterIP
  selector:
    app: glance
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
