kubernetes/apps/glance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  namespace: glance
  labels:
    app: glance
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: glance-glance-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: dashboard.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: glance-svc
            port:
              number: 8080
